updated using position

--- a/index.html
+++ b/index.html
@@ -27,7 +27,14 @@
         </div>
         <div class="nav__options">
             <p> Teach on Udemy</p>
-            <p>My learning</p>
+            <div class="mylearning">
+                <p>My learning</p>
+                <div class="mylearning__pop">
+                    <p>You didnot purchase anything yet</p>
+                </div>
+                </div>
+            
+            
             <i class="fa-regular fa-heart" style="color: #000205;"></i>
             <i class="fa-solid fa-cart-shopping" style="color: #01060e;"></i>
             <i class="fa-regular fa-bell" style="color: #010204;"></i>
