--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
         <p>Marketing</p>
     </div>
 
+   
     <div class="section">
         <img src="./image/box3.jpg" alt="Section">
+        <div class="section__sale">
+            <h1>Udemy Flash Sale</h1>
+            <p>Get top courses for just 499 and Just one day to save but a lifetime to learn</p>
+        </div>
     </div>
 
     <div class="recommdended">
