--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="text" placeholder="Seach here anything....">
         </div>
         <div class="nav__options">
-            <p> Teach on Udemy</p>
+            <p> Courses</p>
             <div class="mylearning">
             <p>My learning</p>
             <div class="mylearning__pop">
@@ -37,6 +37,9 @@
             <i class="fa-solid fa-cart-shopping" style="color: #01060e;"></i>
             <i class="fa-regular fa-bell" style="color: #010204;"></i>
             <i class="fa-regular fa-user" style="color: #02060d;"></i>
+        </div>
+        <div class="nav_menu">
+            <i class="fa-solid fa-bars" style="color: #010409;"></i>
         </div>
     </div>
 
